--- a/DolfinID.ui
+++ b/DolfinID.ui
@@ -37,16 +37,6 @@
      <string>Read Tree</string>
     </property>
    </widget>
-   <widget class="QListView" name="listView">
-    <property name="geometry">
-     <rect>
-      <x>640</x>
-      <y>400</y>
-      <width>151</width>
-      <height>151</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btnLoadTree">
     <property name="geometry">
      <rect>
@@ -63,7 +53,7 @@
    <widget class="QPushButton" name="btnSendImage">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>390</x>
       <y>490</y>
       <width>75</width>
       <height>23</height>
@@ -87,6 +77,19 @@
     </property>
     <property name="gridStyle">
      <enum>Qt::NoPen</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSendAll">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>490</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Send All</string>
     </property>
    </widget>
   </widget>
