--- a/dolfinweb/templates/dfwfooter.html
+++ b/dolfinweb/templates/dfwfooter.html
@@ -5,6 +5,6 @@
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
       </ul>
-      <p class="text-center text-muted">&copy; 2021-2022 Paleontological Society of Korea</p>
+      <p class="text-center text-muted">&copy; 2022 Marine Animal Research and Conservation</p>
     </footer>
 </div>
