--- a/dolfinweb/templates/dolfinweb/dfw_image_list.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_list.html
@@ -1,6 +1,6 @@
 {% extends "dfwbase.html" %}
 {% block content %}
-<h4 class="bd-title p-2 bg-secondary text-light">돌고래 관찰일자 목록</h4>
+<h4 class="bd-title p-2 bg-secondary text-light">돌고래 사진 목록</h4>
 <table class="table table-striped table-sm">
     <thead>
         <tr><td colspan="2">
@@ -18,21 +18,20 @@
                 <th>사진</th>
             </tr>
     </thead>
-    <tbody>
-    {% if date_list %}
-        {% for obs_date in page_obj %}
-        <tr>
-            <td><a href="{% url 'dfw_image_list' obs_date.observation_date %}">{{obs_date.observation_date}}</a></td>
-            <td>{{obs_date.image_count}}</td>
-        </tr>
+    <tbody><tr><td colspan="2">
+    {% if image_list %}
+    <div class="row">
+        {% for image in page_obj %}
+            <div class="col">
+                <a href="{% url 'dfw_image_view' image.id %}"><img width="200" src="{{image.imagefile.url}}"></a><br/>
+            {{image.exifdatetime}}</div>
         {% endfor %}
+    </div>
     {% else %}
-        <tr><td colspan="2">
-            <div>No observation dates are available.</div>
-        </td></tr>
+            <div>No images are available.</div>
     {% endif %}
 
-    </tbody>
+    </td></tr></tbody>
     <tfoot>
         <tr><td colspan="2">
             <div class="container">
