--- a/dolfinweb/templates/dolfinweb/dfw_image_list.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_list.html
@@ -1,6 +1,6 @@
 {% extends "dfwbase.html" %}
 {% block content %}
-<h4 class="bd-title p-2 bg-secondary text-light">돌고래 사진 목록</h4>
+<h4 class="bd-title p-2 bg-secondary text-light">돌고래 사진 목록: {{date}}</h4>
 <table class="table table-striped table-sm">
     <thead>
         <tr><td colspan="2">
@@ -12,19 +12,15 @@
                 </div>
             </div>
         </td></tr>
-        <tr>
-            <tr>
-                <th>날짜</th>
-                <th>사진</th>
-            </tr>
     </thead>
     <tbody><tr><td colspan="2">
     {% if image_list %}
     <div class="row">
         {% for image in page_obj %}
             <div class="col">
-                <a href="{% url 'dfw_image_view' image.id %}"><img width="200" src="{{image.get_thumbnail_url}}"></a><br/>
-            {{image.exifdatetime}}</div>
+                <a href="{% url 'dfw_image_view' image.id %}"><img width="200" src="{{image.get_thumbnail_url}}"></a><br/>            
+            {{image.filename}} @{{image.exifdatetime|time:"H:i"}}
+        </div>
         {% endfor %}
     </div>
     {% else %}
