--- a/dolfinweb/templates/dolfinweb/dfw_image_view.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_view.html
@@ -15,124 +15,79 @@
 <tfoot><tr><td colspan="2"></td></tr></tfoot>
 </table>
 <script>
-   var imageObj = new Image();
-    imageObj.src = '{{image.imagefile.url}}';
+    var canvas = document.getElementById("canvas");
+    var context = canvas.getContext("2d");
 
-   var canvas;
-   var ctx;
-   var widthCanvas;
-   var heightCanvas;
-   
-   // View parameters
-   var xleftView = 0;
-   var ytopView = 0;
-   var widthViewOriginal = 1.0;           //actual width and height of zoomed and panned display
-   var heightViewOriginal = 1.0;
-   var widthView = widthViewOriginal;           //actual width and height of zoomed and panned display
-   var heightView = heightViewOriginal;
-   
-   window.addEventListener("load",setup,false);
-   
-   function setup() {
-       canvas = document.getElementById("canvas");
-       ctx = canvas.getContext("2d");
-   
-       widthCanvas = canvas.width;
-       heightCanvas = canvas.height;
-   
-       canvas.addEventListener("dblclick", handleDblClick, false);  // dblclick to zoom in at point, shift dblclick to zoom out.
-       canvas.addEventListener("mousedown", handleMouseDown, false); // click and hold to pan
-       canvas.addEventListener("mousemove", handleMouseMove, false);
-       canvas.addEventListener("mouseup", handleMouseUp, false);
-       canvas.addEventListener("mousewheel", handleMouseWheel, false); // mousewheel duplicates dblclick function
-       canvas.addEventListener("DOMMouseScroll", handleMouseWheel, false); // for Firefox
-   
-       draw();
-   }
-   
-   function draw() {
-       ctx.setTransform(1,0,0,1,0,0);
-       ctx.scale(widthCanvas/widthView, heightCanvas/heightView);
-       ctx.translate(-xleftView,-ytopView);
-   
-       ctx.fillStyle = "yellow";
-       ctx.fillRect(xleftView,ytopView, widthView,heightView);
-       ctx.drawImage(imageObj,0,0,800,600,0,0,800,600);
+    var widthCanvas;
+    var heightCanvas;
+
+        // View parameters
+    var xleftView = 0;
+    var ytopView = 0;
+    var widthViewOriginal = 1.0;           //actual width and height of zoomed and panned display
+    var heightViewOriginal = 1.0;
+    var widthView = widthViewOriginal;           //actual width and height of zoomed and panned display
+    var heightView = heightViewOriginal;
+
+    var img = new Image();
+    img.src= "{{image.imagefile.url}}";
+    img.onload=function(){
+        draw();
+        widthCanvas = canvas.width;
+        heightCanvas = canvas.height;
+
+        //canvas.addEventListener("dblclick", handleDblClick, false);  // dblclick to zoom in at point, shift dblclick to zoom out.
+        canvas.addEventListener("mousedown", handleMouseDown, false); // click and hold to pan
+        canvas.addEventListener("mousemove", handleMouseMove, false);
+        canvas.addEventListener("mouseup", handleMouseUp, false);
+        //canvas.addEventListener("mousewheel", handleMouseWheel, false); // mousewheel duplicates dblclick function
+        //canvas.addEventListener("DOMMouseScroll", handleMouseWheel, false); // for Firefox
+    }
+    function draw() {
+        context.fillStyle = "grey";
+        context.fillRect(0,0, widthCanvas,heightCanvas);
+
+        context.drawImage(img,lastupX+deltaX,lastupY+deltaY,canvas.width,canvas.height);
+    }
+    
+    var mouseDown = false;
+    var downX = 0;
+    var downY = 0;
+
+    function handleMouseDown(event) {
+        mouseDown = true;
+        downX = event.clientX - this.offsetLeft - this.clientLeft + this.scrollLeft;
+        downY = event.clientY - this.offsetTop - this.clientTop + this.scrollTop;
+
     }
 
-   function handleDblClick(event) {
-       var X = event.clientX - this.offsetLeft - this.clientLeft + this.scrollLeft; //Canvas coordinates
-       var Y = event.clientY - this.offsetTop - this.clientTop + this.scrollTop;
-       var x = X/widthCanvas * widthView + xleftView;  // View coordinates
-       var y = Y/heightCanvas * heightView + ytopView;
-   
-       var scale = event.shiftKey == 1 ? 1.5 : 0.5; // shrink (1.5) if shift key pressed
-       widthView *= scale;
-       heightView *= scale;
-   
-       if (widthView > widthViewOriginal || heightView > heightViewOriginal) {
-       widthView = widthViewOriginal;
-       heightView = heightViewOriginal;
-       x = widthView/2;
-       y = heightView/2;
-       }
-   
-       xleftView = x - widthView/2;
-       ytopView = y - heightView/2;
-   
-       draw();
-   }
-   
-   var mouseDown = false;
-   
-   function handleMouseDown(event) {
-       mouseDown = true;
-   }
-   
-   function handleMouseUp(event) {
-       mouseDown = false;
-   }
-   
-   var lastX = 0;
-   var lastY = 0;
-   function handleMouseMove(event) {
-   
-       var X = event.clientX - this.offsetLeft - this.clientLeft + this.scrollLeft;
-       var Y = event.clientY - this.offsetTop - this.clientTop + this.scrollTop;
-   
-       if (mouseDown) {
-           var dx = (X - lastX) / widthCanvas * widthView;
-           var dy = (Y - lastY)/ heightCanvas * heightView;
-       xleftView -= dx;
-       ytopView -= dy;
-       }
-       lastX = X;
-       lastY = Y;
-   
-       draw();
-   }
-   
-   function handleMouseWheel(event) {
-       var x = widthView/2 + xleftView;  // View coordinates
-       var y = heightView/2 + ytopView;
-   
-       var scale = (event.wheelDelta < 0 || event.detail > 0) ? 1.1 : 0.9;
-       widthView *= scale;
-       heightView *= scale;
-   
-       if (widthView > widthViewOriginal || heightView > heightViewOriginal) {
-       widthView = widthViewOriginal;
-       heightView = heightViewOriginal;
-       x = widthView/2;
-       y = heightView/2;
-       }
-   
-       // scale about center of view, rather than mouse position. This is different than dblclick behavior.
-       xleftView = x - widthView/2;
-       ytopView = y - heightView/2;
-   
-       draw();
-   }
+    var lastupX = 0;
+    var lastupY = 0;
+    var deltaX = 0;
+    var deltaY = 0;
+    function handleMouseUp(event) {
+        mouseDown = false;
+        lastupX += deltaX;
+        lastupY += deltaY;
+        deltaX = 0;
+        deltaY = 0;
+    }
+    function handleMouseMove(event) {
+
+        var X = event.clientX - this.offsetLeft - this.clientLeft + this.scrollLeft;
+        var Y = event.clientY - this.offsetTop - this.clientTop + this.scrollTop;
+
+        //console.log(X,Y)
+        if (mouseDown) {
+            deltaX = X - downX;
+            deltaY = Y - downY;
+            //console.log(deltaX,deltaY);
+        }
+        lastX = X;
+        lastY = Y;
+        //console.log(xleftView,ytopView)
+        draw();
+    }
 </script>
 {% endblock %}
 
