--- a/dolfinweb/templates/dolfinweb/dfw_image_view.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_view.html
@@ -15,6 +15,8 @@
 <tfoot><tr><td colspan="2"></td></tr></tfoot>
 </table>
 <script>
+    var LEFT_BUTTON = 0;
+    var RIGHT_BUTTON = 2;
     var canvas = document.getElementById("canvas");
     var context = canvas.getContext("2d");
 
@@ -28,13 +30,28 @@
     var heightViewOriginal = 1.0;
     var widthView = widthViewOriginal;           //actual width and height of zoomed and panned display
     var heightView = heightViewOriginal;
+    var widthImage = 0;
+    var heightImage = 0;
+    var image_canvas_ratio = 0;
+    
 
     var img = new Image();
     img.src= "{{image.imagefile.url}}";
     img.onload=function(){
-        draw();
         widthCanvas = canvas.width;
         heightCanvas = canvas.height;
+        whratioCanvas = widthCanvas / heightCanvas;
+        widthImage = img.width;
+        heightImage = img.height;
+        whratioImage = widthImage / heightImage;
+        if( whratioCanvas > whratioImage ) {
+            image_canvas_ratio = heightImage / heightCanvas;
+        } else {
+            image_canvas_ratio = widthImage / widthCanvas;
+        }
+        console.log("canvas:", widthCanvas, heightCanvas, "image:", widthImage, heightImage);
+        //image_canvas_ratio = widthImage/widthCanvas;
+        draw();
 
         //canvas.addEventListener("dblclick", handleDblClick, false);  // dblclick to zoom in at point, shift dblclick to zoom out.
         canvas.addEventListener("mousedown", handleMouseDown, false); // click and hold to pan
@@ -45,27 +62,51 @@
         canvas.addEventListener('contextmenu', (event) => {event.preventDefault();});
         //canvas.addEventListener("DOMMouseScroll", handleMouseWheel, false); // for Firefox
     }
+    function map_to_canvas( coord ) { return Math.round(( coord / image_canvas_ratio ) * scale); }
+    function map_to_image( coord ) { return Math.round(( coord / scale ) * image_canvas_ratio); }
     function draw() {
         context.fillStyle = "grey";
         context.fillRect(0,0, widthCanvas,heightCanvas);
-
-        context.drawImage(img,lastupX+deltaX,lastupY+deltaY,canvas.width * scale,canvas.height*scale);
+        context.drawImage(img,lastupX+deltaX,lastupY+deltaY,(widthImage/image_canvas_ratio)*scale,(heightImage/image_canvas_ratio)*scale);
+        for( var i=0;i<box_list.length;i++){
+            box = box_list[i];
+            context.beginPath();
+            //context.rect( (box[0]/image_canvas_ratio)*scale+lastupX+deltaX, (box[1]/image_canvas_ratio)*scale+lastupY+deltaY, ((box[2]-box[0])/image_canvas_ratio)*scale, ((box[3]-box[1])/image_canvas_ratio)*scale);
+            context.rect( map_to_canvas(box[0])+lastupX+deltaX, map_to_canvas(box[1])+lastupY+deltaY, map_to_canvas(box[2]-box[0]), map_to_canvas(box[3]-box[1]));
+            context.stroke();            
+        }
+        if( drawing_box ) {
+            context.beginPath();
+            [ draw_x1, draw_y1, draw_x2, draw_y2 ] = [ box_x1, box_y1, box_x2, box_y2 ];
+            if( box_x1 > box_x2 ) { [draw_x1, draw_x2] = [box_x2,box_x1];}
+            if( box_y1 > box_y2 ) { [draw_y1, draw_y2] = [box_y2,box_y1];}
+            context.rect( draw_x1, draw_y1, draw_x2 - draw_x1, draw_y2 - draw_y1 );
+            context.stroke();            
+        }
     }
     
-    var mouseDown = false;
+    var panning = false;
+    var drawing_box = false;
     var downX = 0;
     var downY = 0;
+    var box_x1 = -1, box_y1 = -1, box_x2 = -1, box_y2 = -1;
+    var box_list = [];
 
     function handleMouseDown(event) {
         //console.log("button:", event.button);
-        if(event.button == 2) {
-            mouseDown = true;
+        if(event.button == RIGHT_BUTTON) {
+            panning = true;
             //downX = event.clientX - this.offsetLeft - this.clientLeft + this.scrollLeft;
             //downY = event.clientY - this.offsetTop - this.clientTop + this.scrollTop;
             let box = this.getBoundingClientRect();
             downX = Math.round(event.clientX-box.left);
             downY = Math.round(event.clientY-box.top);
             //console.log("down:",downX,downY);
+        } else if( event.button == LEFT_BUTTON ) {
+            let box = this.getBoundingClientRect();
+            box_x1 = Math.round(event.clientX-box.left);
+            box_y1 = Math.round(event.clientY-box.top);
+            drawing_box = true
         }
     }
 
@@ -76,12 +117,28 @@
     var scale=1;
     function handleMouseUp(event) {
         //if(event.button == 2) { console.log("right button"); event.preventDefault(); }
-        if(event.button == 2) {
-            mouseDown = false;
+        if(event.button == RIGHT_BUTTON) {
+            panning = false;
             lastupX += deltaX;
             lastupY += deltaY;
             deltaX = 0;
             deltaY = 0;
+        } else if( event.button == LEFT_BUTTON ){
+            /* add box */
+            drawing_box = false;
+            let box = this.getBoundingClientRect();
+            box_x2 = Math.round(event.clientX-box.left);
+            box_y2 = Math.round(event.clientY-box.top);
+            if(box_x1>box_x2){[box_x1,box_x2]=[box_x2,box_x1];}
+            if(box_y1>box_y2){[box_y1,box_y2]=[box_y2,box_y1];}
+            //console.log( box_x1, box_y1, box_x2, box_y2 );
+            real_x1 = Math.max(map_to_image(box_x1 - lastupX),0);
+            real_x2 = Math.min(map_to_image(box_x2 - lastupX),widthImage);
+            real_y1 = Math.max(map_to_image(box_y1 - lastupY),0);
+            real_y2 = Math.min(map_to_image(box_y2 - lastupY),heightImage);
+            //console.log( real_x1, real_y1, real_x2, real_y2 );
+            box_list[box_list.length] = [real_x1, real_y1, real_x2, real_y2];
+            [box_x1,box_y1,box_x2,box_y2] = [-1,-1,-1,-1];
         }
     }
     
@@ -95,10 +152,13 @@
 
         //console.log(X,event.clientX,box.left,box.top,this.offsetLeft,this.clientLeft,this.scrollLeft,Y,event.clientY,this.offsetTop,this.clientTop,this.scrollTop,lastupX,lastupY);
         //console.log(event.clientX,box.left,event.clientY,box.top,Math.round(event.clientX-box.left),Math.round(event.clientY-box.top));
-        if (mouseDown) {
+        if (panning) {
             deltaX = X - downX;
             deltaY = Y - downY;
             //console.log(deltaX,deltaY);
+        } else if ( drawing_box ) {
+            box_x2 = X;
+            box_y2 = Y;
         }
         lastX = X;
         lastY = Y;
@@ -126,10 +186,8 @@
         lastupX = X - ( X - lastupX ) * scale_proportion;
         lastupY = Y - ( Y - lastupY ) * scale_proportion;
         //console.log(X, Y, lastupX, lastupY, scale);
-
-        
         draw();
-    }    
+    }
 </script>
 {% endblock %}
 
