--- a/dolfinweb/templates/dolfinweb/dfw_image_view.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_view.html
@@ -60,7 +60,7 @@
         canvas.addEventListener("mousewheel", handleMouseWheel, false); // mousewheel duplicates dblclick function
 
         canvas.addEventListener('contextmenu', (event) => {event.preventDefault();});
-        //canvas.addEventListener("DOMMouseScroll", handleMouseWheel, false); // for Firefox
+        canvas.addEventListener("DOMMouseScroll", handleMouseWheel, false); // for Firefox
     }
     function map_to_canvas( coord ) { return Math.round(( coord / image_canvas_ratio ) * scale); }
     function map_to_image( coord ) { return Math.round(( coord / scale ) * image_canvas_ratio); }
@@ -93,7 +93,7 @@
     var box_list = [];
 
     function handleMouseDown(event) {
-        //console.log("button:", event.button);
+        console.log("button:", event.button);
         if(event.button == RIGHT_BUTTON) {
             panning = true;
             //downX = event.clientX - this.offsetLeft - this.clientLeft + this.scrollLeft;
@@ -117,6 +117,7 @@
     var scale=1;
     function handleMouseUp(event) {
         //if(event.button == 2) { console.log("right button"); event.preventDefault(); }
+        console.log("mouse up")
         if(event.button == RIGHT_BUTTON) {
             panning = false;
             lastupX += deltaX;
@@ -165,10 +166,11 @@
         //console.log(xleftView,ytopView)
         draw();
     }
-
     function handleMouseWheel(event) {
         //event.stopPropagation();
+        console.log("wheel");
         event.preventDefault();
+
         var scaleDelta = (event.wheelDelta < 0 || event.detail > 0) ? -0.1 : +0.1;
         if( scale < 0.2 && scaleDelta < 0 ) return;
         if( scale > 1 ) scaleDelta *= Math.floor(scale);
@@ -185,7 +187,7 @@
         //console.log(X, Y, lastupX, lastupY, scale);
         lastupX = X - ( X - lastupX ) * scale_proportion;
         lastupY = Y - ( Y - lastupY ) * scale_proportion;
-        //console.log(X, Y, lastupX, lastupY, scale);
+        console.log(X, Y, lastupX, lastupY, scale);
         draw();
     }
 </script>
