--- a/dolfinweb/templates/dolfinweb/dfw_edit_finbox.html
+++ b/dolfinweb/templates/dolfinweb/dfw_edit_finbox.html
@@ -15,22 +15,19 @@
         </div>
         <form action="" method="post">
             {% csrf_token %}
-            <table class="table table-striped mt-3">
+            <table class="table table-striped mt-3" style="display:none;">
                 <thead class="text-center"><tr><th>이름</th><th>Box좌표</th><th>삭제</th></tr></thead>
                 {% if dolfinbox_formset %}
                     {{ dolfinbox_formset.management_form }}
-                    <tbody id="box-form-container">
+                    <tbody id="dolfinbox-form-container">
                         <tr id="empty-form" style="display:none;">
-                            <td>{{dolfinbox_formset.empty_form.dolfin_image}}</td>
-                            <td>{{dolfinbox_formset.empty_form.boxname}}</td>
+                            <td>{{dolfinbox_formset.empty_form.dolfin_image}}{{dolfinbox_formset.empty_form.boxname}}</td>
                             <td>{{dolfinbox_formset.empty_form.coords_str}}</td>
-                            <td></td>
+                            <td>{{dolfinbox_formset.empty_form.DELETE}}</td>
                         </tr>
                         {% for dolfinbox_form in dolfinbox_formset %}
-                        <tr class="dolfinbox-form">
-                            <td>{{dolfinbox_form.id}}
-                            {{dolfinbox_form.dolfin_image}}
-                            {{dolfinbox_form.boxname}}</td>
+                        <tr class="dolfinbox-form text-center">
+                            <td>{{dolfinbox_form.id}}{{dolfinbox_form.dolfin_image}}{{dolfinbox_form.boxname}}</td>
                             <td>{{dolfinbox_form.coords_str}}</td>
                             <td>{{dolfinbox_form.DELETE}}</td>
                         </tr>
@@ -39,17 +36,19 @@
                 {% endif %}
                 <tfoot><tr><td colspan="6">
                     <div class="container text-center">
-                        {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
                     </div>
                 </td></tr></tfoot>
+            </table>
+            {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
+        </form>
         
         </td>
     </tr>
     </tbody>    
 <tfoot><tr><td colspan="2"></td></tr></tfoot>
 </table>
-{% include "dolfinweb/dfw_finbox.js" %}
 <script>
+    {% include "dolfinweb/dfw_finbox.js" %}
     {% if image.finboxes.all %}
     box_list = [ 
     {%for finbox in image.finboxes.all %}
