--- a/dolfinweb/templates/dolfinweb/dfw_edit_finbox.html
+++ b/dolfinweb/templates/dolfinweb/dfw_edit_finbox.html
@@ -15,21 +15,19 @@
         </div>
         <form action="" method="post">
             {% csrf_token %}
-            <table class="table table-striped mt-3" style="display:block;">
+            <table class="table table-striped mt-3">
                 <thead class="text-center"><tr><th>이름</th><th>Box좌표</th><th>삭제</th></tr></thead>
                 {% if dolfinbox_formset %}
                     {{ dolfinbox_formset.management_form }}
                     <tbody id="dolfinbox-form-container">
                         <tr id="empty-form" style="display:none;">
                             <td>{{dolfinbox_formset.empty_form.dolfin_image}}{{dolfinbox_formset.empty_form.boxname}}</td>
-                            <td>{{dolfinbox_formset.empty_form.boxcolor}}</td>
                             <td>{{dolfinbox_formset.empty_form.coords_str}}</td>
                             <td>{{dolfinbox_formset.empty_form.DELETE}}</td>
                         </tr>
                         {% for dolfinbox_form in dolfinbox_formset %}
                         <tr class="dolfinbox-form text-center">
                             <td>{{dolfinbox_form.id}}{{dolfinbox_form.dolfin_image}}{{dolfinbox_form.boxname}}</td>
-                            <td>{{dolfinbox_form.boxcolor}}</td>
                             <td>{{dolfinbox_form.coords_str}}</td>
                             <td>{{dolfinbox_form.DELETE}}</td>
                         </tr>
@@ -38,10 +36,10 @@
                 {% endif %}
                 <tfoot><tr><td colspan="6">
                     <div class="container text-center">
+                        {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
                     </div>
                 </td></tr></tfoot>
             </table>
-            {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
         </form>
         
         </td>
@@ -50,7 +48,7 @@
 <tfoot><tr><td colspan="2"></td></tr></tfoot>
 </table>
 <script>
-    var finid = {{finid}};
+    {% if finid %}var finid = {{finid}};{%endif%}
     {% if image.finboxes.all %}
     box_list_data = [ 
     {%for finbox in image.finboxes.all %}
