--- a/dolfinweb/templates/dolfinweb/dfw_image_list.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_list.html
@@ -34,6 +34,7 @@
                 <div class="row">
                     <div class="col">{% include "dfwpaginator.html" %}</div>
                     <div class="col text-end">
+                        <a class="btn btn-info text-white btn-sm" role="button" href="{% url 'dfw_fin_list' obs_date %}">Fin 목록</a>
                     </div>
                 </div>
             </div>
