--- a/dolfinweb/templates/dolfinweb/dfw_fin_list.html
+++ b/dolfinweb/templates/dolfinweb/dfw_fin_list.html
@@ -1,6 +1,6 @@
 {% extends "dfwbase.html" %}
 {% block content %}
-<h4 class="bd-title p-2 bg-secondary text-light">돌고래 등지느러미 사진 목록: {{date}}</h4>
+<h4 class="bd-title p-2 bg-secondary text-light">{{obs_date}}</h4>
 <table class="table table-striped table-sm">
     <thead>
         <tr><td colspan="2">
@@ -15,11 +15,12 @@
     </thead>
     <tbody><tr><td colspan="2">
     {% if fin_list %}
-    <div class="row">
+    <div class="row my-2 text-center align-items-center">
         {% for fin in page_obj %}
-            <div class="col">
+        <div class="col align-items-center">
+            <div class="" style="width:200px;height:230px;">
                 <a href="{% url 'dfw_edit_finbox' fin.dolfin_image.id fin.id %}"><img {% if fin.whratio > 1%}width{%else%}height{%endif%}="200" src="{% url 'dfw_fin_image' fin.id %}"></a><br/>
-            {{fin.boxname}} @{{fin.exifdatetime|time:"H:i"}}
+            {{fin.boxname}} @{{fin.exifdatetime|time:"H:i"}}</div>
         </div>
         {% endfor %}
     </div>
@@ -34,7 +35,7 @@
                 <div class="row">
                     <div class="col">{% include "dfwpaginator.html" %}</div>
                     <div class="col text-end">
-                        <a class="btn btn-info text-white btn-sm" role="button" href="{% url 'dfw_image_list' date %}">사진 목록</a>
+                        <a class="btn btn-info text-white btn-sm" role="button" href="{% url 'dfw_image_list' obs_date %}">사진 목록</a>
                     </div>
                 </div>
             </div>
