--- a/dolfinweb/templates/dolfinweb/dfw_image_list.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_list.html
@@ -1,6 +1,6 @@
 {% extends "dfwbase.html" %}
 {% block content %}
-<h4 class="bd-title p-2 bg-secondary text-light">돌고래 사진 목록: {{date}}</h4>
+<h4 class="bd-title p-2 bg-secondary text-light">{{obs_date}}</h4>
 <table class="table table-striped table-sm">
     <thead>
         <tr><td colspan="2">
@@ -19,7 +19,7 @@
         {% for image in page_obj %}
             <div class="col">
                 <a href="{% url 'dfw_image_view' image.id %}"><img width="200" src="{{image.get_thumbnail_url}}"></a><br/>            
-            {{image.filename}} @{{image.exifdatetime|time:"H:i"}}
+            {{image.filename}} @{{image.exifdatetime|time:"H:i"}} ({{image.finboxes.count}})
         </div>
         {% endfor %}
     </div>
