--- a/dolfinweb/templates/dolfinweb/dfw_image_view.html
+++ b/dolfinweb/templates/dolfinweb/dfw_image_view.html
@@ -16,14 +16,14 @@
     </tr>
     </tbody>    
 <tfoot><tr><td colspan="2"><div class="row">
-    <div class="col text-left">        
+    <div class="col text-center">
         {%if prev_image%}<a class="btn btn-info text-white btn-sm" role="button" href="{% url 'dfw_image_view' prev_image.id%}">&lt;</a>{%endif%}
         <a class="btn btn-info text-white btn-sm" role="button" href="{% url last_list obs_date%}?page={{page_number}}">목록</a>
         {%if next_image%}<a class="btn btn-info text-white btn-sm" role="button" href="{% url 'dfw_image_view' next_image.id%}">&gt;</a>{%endif%}
     </div>
-    <div class="col text-end">
+    <!--div class="col text-end">
         <a class="btn btn-info text-white btn-sm" role="button" href="{% url 'dfw_edit_finbox' image.id %}">Fin 편집</a>
-    </div>
+    </div-->
 </div></td></tr></tfoot>
 </table>
 <script>
