added cancel button to edit_finbox

--- a/dolfinweb/templates/dolfinweb/dfw_edit_finbox.html
+++ b/dolfinweb/templates/dolfinweb/dfw_edit_finbox.html
@@ -42,7 +42,8 @@
                         {% endif %}
                             <div class="container text-center">
                                 <br/>
-                                {% bootstrap_button "Save" button_type="submit" button_class="btn-info text-white" %}
+                                {% bootstrap_button "저장" button_type="submit" button_class="btn-info text-white" %}
+                                <input class="btn btn-info text-white" type="reset" value="취소" onclick="window.location.reload();">
                             </div>
                 </form>
             </td></tr>
