--- a/dolfinweb/templates/dolfinweb/dfw_user_register_form.html
+++ b/dolfinweb/templates/dolfinweb/dfw_user_register_form.html
@@ -5,7 +5,10 @@
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <table class="table table-striped">
-    {{ form }}
+        <tr><th>사용자ID</th><td>{{form.username}}</td></tr>
+        <tr><th>이메일</th><td>{{form.email}}</td></tr>
+        <tr><th>비밀번호</th><td>{{form.password1}}{{form.password1.helptext}}</td></tr>
+        <tr><th>비밀번호 확인</th><td>{{form.password2}}{{form.password2.helptext}}</td></tr>
     </table>
     <div class="container text-center">{% bootstrap_button "Register" button_type="submit" button_class="btn-primary btn-lg" %}</div>
 </form>
